<resources>
    <string name="app_name">Memorize Vocabulary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_hello">Hello</string>
    <string name="str_username">Username</string>
    <string name="str_zero">0</string>
    <string name="str_all_lessons">All lessons</string>
    <string name="str_completed">Completed</string>
    <string name="str_to_complete">To complete</string>
    <string name="str_search">Search</string>
    <string name="str_create">Create</string>
    <string name="str_play">Play</string>
    <string name="str_game">Game</string>
    <string name="str_none_lessons_info">You have no lessons yet. Click the Create button to add a new lesson. </string>
    <string name="str_none_words_info">You have no new words yet. Click the Add word button to add a new word.</string>
    <string name="str_lessons">Lessons</string>
    <string name="str_count_words">words</string>
    <string name="str_date">29.12.2022</string>
    <string name="str_categories">Categories</string>
    <string name="str_title">Title</string>
    <string name="str_description">Description</string>
    <string name="str_choose_color">Choose color (Default color is pure gray)</string>
    <string name="str_title_hint">What is name of this category ?</string>
    <string name="str_description_hint">What about is this category ?</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_edit">Edit</string>
    <string name="str_add_word">Add</string>
    <string name="letter_c">C</string>
    <string name="str_cancel_trans">Bekor qilish</string>
    <string name="str_stats">0/0</string>
    <string name="str_terms_count">20 Terms</string>
    <string name="desc_rv">this is select photo</string>
    <string name="str_enter_word">Enter word</string>
    <string name="str_enter_english">Try to enter an English word</string>
    <string name="str_what_mean">What does this word mean?</string>
    <string name="str_enter_meaning">Enter the meaning</string>
    <string name="str_select_image">Select image for the word ( Optional )</string>
    <string name="str_local">Local</string>
    <string name="str_noun">noun</string>
    <string name="str_enter_part_of_speech">Enter part of speech</string>
    <string name="str_hint_part">noun, verb, adjective and etc.</string>
    <string name="str_make_sure">Make sure all fields are complete!</string>
    <string name="str_no_information">There is no information</string>
    <string name="str_answer">Answer</string>
    <string name="str_wrong">Wrong</string>
    <string name="str_correct">Correct</string>
    <string name="str_question_title">Do you know this word ?</string>
    <string name="str_drag">If you know drag right otherwise drag left </string>
    <string name="str_question_title_picture">Do you know what is in the picture?</string>
    <string name="str_that_s_all">That\'s all</string>
    <string name="str_what_name">What is your name ?</string>
    <string name="str_enter_username">Enter username</string>
    <string name="str_firstname_lastname">Firstname</string>
    <string name="str_yourusername">ironman etc.</string>
    <string name="str_hi">Hi!\nWelcome to our app!</string>
    <string name="str_let_s_go">Let\'s go</string>
    <string name="str_i_know">I know</string>
    <string name="str_i_dont_know">I don\'t know</string>
    <string name="str_incorrect_username">Incorrect username, enter again!</string>
    <string name="str_dont_word">You don\'t have any word</string>
    <string name="str_sorry">Sorry, this feature will be added in future versions!</string>
    <string name="str_category">Category</string>
    <string name="str_delete">Delete</string>
    <string name="str_delete_word">Do you wont delete the word ?</string>
    <string name="str_allow">Allow</string>
    <string name="str_delete_category">Do you wont delete the category ?</string>
    <string name="str_word">Word</string>
    <string name="str_ok">OK</string>
    <string name="str_unsatisfactory">Unsatisfactory.</string>
    <string name="str_satisfactory">Satisfactory!</string>
    <string name="str_good">Good!!</string>
    <string name="str_excellent">Excellent!!!</string>
    <string name="str_words">words</string>
    <string name="str_in_progress">Doing</string>
    <string name="str_new">To Do</string>
    <string name="str_successful">Successful</string>
    <string name="str_done">Done</string>
    <string name="str_enter_example">Enter example (Optional) </string>
    <string name="str_how_use">How it is used in sentences?</string>
    <string name="str_shuffle_all">All in one</string>
    <string name="str_typing">Typing</string>
    <string name="str_test">Test</string>
    <string name="str_speech">Speech</string>
    <string name="str_hearing">Hearing</string>
    <string name="str_grammar">Grammar</string>
    <string name="str_hear_voice">Hear the voice and write!</string>
    <string name="str_touch_hear_again">Touch the icon to hear again</string>
    <string name="str_enter_answer">Enter your answer in English</string>
    <string name="str_not_understand">Not know</string>
    <string name="str_right">Right!</string>
    <string name="str_next">Next</string>
    <string name="str_prev">Prev</string>
    <string name="str_close">Close</string>
    <string name="str_check">Check</string>
    <string name="str_set_up_game">Set Up Game</string>
    <string name="str_choose_game_type">Choose game type</string>
    <string name="str_help_choose_game">in category etc.</string>
    <string name="str_word_amount">Enter word amount</string>
    <string name="str_hint_count">20 or more etc.</string>
    <string name="str_choose_category">Choose category</string>
    <string name="str_stop">Stop game</string>
    <string name="str_start_game">Touch the play to start game</string>
    <string name="str_sound_on">Sound was turned on</string>
    <string name="str_sound_off">Sound was turned off</string>
    <string name="str_finish">Finish</string>
    <string name="str_a">A</string>
    <string name="str_b">B</string>
    <string name="str_c">C</string>
    <string name="str_d">D</string>

    <string-array name="part_of_speech">
        <item>noun</item>
        <item>pronoun</item>
        <item>verb</item>
        <item>adjective</item>
        <item>adverb</item>
        <item>preposition</item>
        <item>conjunction</item>
        <item>interjection</item>
    </string-array>

    <string-array name="game_types">
        <item>In categories</item>
        <item>Random in all words</item>
        <item>Random in last words</item>
    </string-array>

</resources>