<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/back_card"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/pure_gray"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                style="@style/BoldText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/str_lessons"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_new"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_corner_rounded"
                android:backgroundTint="@color/orange"
                android:paddingHorizontal="5dp"
                android:text="@string/str_new"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_progress"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_corner_rounded"
                android:backgroundTint="@color/yellow"
                android:paddingHorizontal="5dp"
                android:text="@string/str_in_progress"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_successful"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_corner_rounded"
                android:backgroundTint="@color/blue"
                android:paddingHorizontal="5dp"
                android:text="@string/str_done"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/str_none_lessons_info"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_word_count"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/str_count_words"
                android:textColor="@color/yellow"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_create_date"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/str_date"
                android:textColor="@color/yellow"
                android:textSize="12sp" />

        </FrameLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>