<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <TextView
        style="@style/BoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_hi"
        android:textColor="@color/green"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp">

        <TextView
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/str_what_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/str_firstname_lastname"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/shape_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/str_enter_username"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_description"
            app:boxStrokeColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/str_yourusername"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/shape_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lets_go"
            style="@style/MediumText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/blue"
            android:drawableEnd="@drawable/ic_arrow_forward_24px"
            android:text="@string/str_let_s_go"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

</LinearLayout>