<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/dark"
    android:gravity="top"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@color/blue"
            app:shapeAppearanceOverlay="@style/rounded_corner" />

        <TextView
            android:id="@+id/tv_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/public_sans"
            android:text="@string/letter_c"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/tv_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_black"
            android:text="@string/str_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/public_sans_extralight"
            android:text="@string/str_cancel_trans"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_stats"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:fontFamily="@font/public_sans"
        android:gravity="center"
        android:text="@string/str_stats"
        android:textColor="@color/yellow" />

</LinearLayout>