<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@color/dark"
    android:gravity="top"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@color/blue"
            app:shapeAppearanceOverlay="@style/rounded_corner" />

        <TextView
            android:id="@+id/tv_letter"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/tv_word"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_none_lessons_info"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_type"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_noun"
            android:textColor="@color/green"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_trans"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_none_words_info"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_stats"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/str_stats"
        android:textColor="@color/yellow"
        android:textSize="14sp" />

</LinearLayout>