<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.main.game.main.SetGameFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:paddingHorizontal="16dp"
        app:elevation="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark">

            <TextView
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_set_up_game"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/str_choose_game_type"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputStyleMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/yellow"
                app:endIconTint="@color/yellow">

                <AutoCompleteTextView
                    android:id="@+id/et_game_type"
                    style="@style/MediumText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/str_help_choose_game"
                    android:inputType="none"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/view_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/MediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/str_word_amount"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_count"
                        style="@style/MediumText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/str_hint_count"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray"
                        android:textCursorDrawable="@drawable/shape_cursor" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/MediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingBottom="15dp"
                    android:text="@string/str_choose_category"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ProgressBar
                        android:id="@+id/progressbar"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="50dp"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/blue"
                        android:visibility="invisible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_buttons"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gray"
                    android:text="@string/str_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_play"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:text="@string/str_play"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>